2015-08-05  Gerrit Holl  <g.holl@reading.ac.uk>

	* arts-2-2-50

	* doc/uguide/common.tex, doc/uguide/concept.tex:

	- Update docserver links to Hamburg server

	- Link to stable docserver rather than trunk docserver, as this is the
	stable branch.

2015-07-02  Jana Mendrok  <jana.mendrok@ltu.se>

	* arts-2-2-49

	* src/continua.cc (MPM93RainExt): Catch vmr/rainrate=0. case (bugfix).

2015-06-18  Jana Mendrok  <jana.mendrok@ltu.se>

	* arts-2-2-48

	* controlfiles/artscomponents/arts-xml-data/
	TestPlanetIsoRatios.[Venus,Mars,Jupiter].y_reference.xml:
	Corrected reference values (accidentially the previous references
	corresponded to old line data).

2015-06-16  Jana Mendrok  <jana.mendrok@ltu.se>

	* arts-2-2-47

	* controlfiles/artscomponents/absorption/IsoRatios_H2O[orig,mani].xml:
	Updated N2 iso ratios to state of built-in data (which had changed by
	2014-04-07). Fixes broken TestIsoRatio.arts case.

	* controlfiles/artscomponents/arts-xml-data/TestPlanetIsoRatios.arts,
	TestPlanetIsoRatios.[Venus,Mars,Jupiter].y_reference.xml:
	Apply Compare. Reference data for PlanetIso case added.

	* doc/uguide/absorption_theory.tex, absorption.tex: Spell/Grammar fixes.

2015-05-06  Mathias Milz  <mathias.milz@ltu.se>

	* arts-2-2-46

	* src/m_sensor.cc: (f_gridFromSensorHIRS)
	  replaced line 747:
	       Vector grid(fmin[i], npi, gs);
	  by:  
	       Vector grid;
	       linspace(grid,fmin[i],fmax[i],gs);
	  
	  as numerical uncertainties in gs created 
	  errors in f_grid 

	* src/m_sensor.cc: (f_gridFromSensorAMSU)
	  replaced line 506:
	       Vector grid(fmin[i], npi, gs);
	  by:  
	       Vector grid;
	       linspace(grid,fmin[i],fmax[i],gs);
	  
	  as numerical uncertainties in gs created 
	  errors in f_grid 

2015-03-13  Jana Mendrok  <jana.mendrok@ltu.se>

	* arts-2-2-45

	* src/methods.cc (ybatchCalc): Fix built-in doc of robust: doesn't set
	-1 values anymore, but empty vectors.

2015-02-27  Jana Mendrok  <jana.mendrok@ltu.se>

	* Arts-2-2-44
